--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
       "author": "Anirudha Bhurke",
       "license": "ISC",
       "dependencies": {
+            "dotenv": "^8.2.0",
             "ejs": "^3.1.5",
             "express": "^4.17.1",
-            "imagemin": "^7.0.1",
-            "imagemin-jpegtran": "^7.0.0",
-            "imagemin-pngquant": "^9.0.1",
-            "multer": "^1.4.2"
+            "multer": "^1.4.2",
+            "tinify": "^1.6.0-beta.2"
       },
       "devDependencies": {
             "nodemon": "^2.0.4"
